--- a/Glossary/glossaryData.css
+++ b/Glossary/glossaryData.css
@@ -1,12 +1,25 @@
+html {
+  box-sizing: border-box;
+}
+
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+  box-sizing: inherit;
+  margin: 0;
+  padding: 0;
 }
 
 body {
   align-items: center;
   font-family: Arial, Helvetica, sans-serif;
+  min-height: 100%;
+}
+
+.row {
+  display: flex;
+  flex: row wrap;
+  width: 100%;
 }
 
 table,
