--- a/The DOM Detective/My Book List/myBookList.css
+++ b/The DOM Detective/My Book List/myBookList.css
@@ -11,6 +11,7 @@ html {
 }
 
 body {
+  font-family: Arial, Helvetica, sans-serif;
   min-height: 100%;
 }
 
@@ -18,4 +19,35 @@ body {
   display: flex;
   flex: row wrap;
   width: 100%;
+}
+
+h1 {
+  padding: 1em;
+  text-align: center;
+}
+
+img {
+  height: 470px;
+}
+
+ul {
+  align-items: center;
+  display: inline-flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 100%;
+}
+
+li {
+  height: 500px;
+  list-style-type: none;
+  margin: 1em;
+  text-align: center;
+  width: 320px;
+}
+
+p {
+  font-size: 1.2em;
+  padding: 0.5em;
 }
